--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,20 +1,19 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;   
 }
 
+$secondary:     white;
+
 .fondoInicio{
-    background-image: url(../img/fondo.png);
-    background-position: center;
+    background-color: rgb(34,34,34);
+    position:top;
+    background-attachment: fixed;
 }
 
 .indexNav{
     z-index:999;
-}
-
-.fondoverde{
-    background-color: #008380;
-    color: white;
 }
 
 .tamImgHeader{
@@ -22,7 +21,11 @@
 }
 
 .tamImgServ{
-    width: 7rem;
+    width: 5rem;
+}
+
+.tamImgCte{
+    width: 30rem;
 }
 
 .tamImgCont{
@@ -37,105 +40,83 @@
     width: 2rem;
 }
 
-// Noticias//
-$fondoflex: rgb(199, 197, 197);
-$fondonoticias: purple;
-$textTitle:white;
-$colorfontnav: rgb(155,155,155);
-
-.fondoGeneral{
-    background-color: $fondoflex;
-}
-
-article{
-    background-color: $fondonoticias;
-    h1{
-        color: $textTitle;
-        text-align: center;
-    }
-    p{
-        font-size: 1,5rem;
-        text-align: center;
-        color: white;
-    }
-}
-
-aside{
-    background-color: whitesmoke;
-    text-align: center;
-    & a:hover{
-        color:orange;
-    }
-}
-
-$tarjetaHeader:(
-    fondo: grey,
-    alin: center,
-    tamTexto: 20px,
-    colorTexto: white,
-    margen: 0,
-    padd:0);
-
-$tarjetaCuerpo:(
-    fondo: rgb(235, 233, 233),
-    alin: justify,
-    tamTexto: 16px,
-    colorTexto: rgb(90, 89, 89),
-    margen: 0px,
-    padd:10px);
-
-
-.tarjetaHeader{
-    background-color: map-get($tarjetaHeader, fondo);
-    text-align: map-get($tarjetaHeader, alin);
-    font-size: map-get($tarjetaHeader, tamTexto);
-    color: map-get($tarjetaHeader,colorTexto);
-    margin: map-get($tarjetaHeader,margen);
-}
-
-.tarjetaCuerpo{
-    background-color: map-get($tarjetaCuerpo, fondo);
-    text-align: map-get($tarjetaCuerpo, alin);
-    font-size: map-get($tarjetaCuerpo, tamTexto);
-    color: map-get($tarjetaCuerpo,colorTexto);
-    padding: map-get($tarjetaCuerpo,padd);
-}
-
-.tarjeta--Header2{
-    @extend .tarjetaHeader;
-    background-color: #008380
-}
-
-.tarjeta--Cuepo2{
-    @extend .tarjetaCuerpo;
-    background-color: bisque;
-    color: black;
-}
-
-@mixin borde ($bradius, $type, $bcolor, $pad, $mar){
-    border-radius: $bradius ;
-    border-style: $type;
-    border-color: $bcolor;
-    padding: $pad;
-    margin: $mar;
-}
-
-.borde{
-    @include borde(10px, solid, purple, 0px, 0px)
-}
-
-$secondary:     white;
-
 .tamImgContMenu{
-            width: 28px;
+    width: 28px;
         }   
+
+.fondoblanco{
+    background-color: white;
+}
+
+.textJusify{
+    text-align: justify;
+}
+
+.fondoServicios{
+    background-color: rgb(52,58,52);
+}
+
+.tarjServicios{
+    border: solid;
+    border-color: grey;
+    border-radius: 20px;
+    padding-bottom: 5px;
+    background-color: #222222;
+    color: white;
+}
+
+.fondoEquipo{
+    background-color: rgb(52,58,52);
+}
+
+.fondoContacto{
+    background-color: #222222;
+    color: white;
+}
+
+.fondoGtest{
+    background-color: rgb(52,58,52);
+    color:white;
+}
+
+.fondoPagCont{
+    background-color: rgb(52,58,52);
+    color:white;
+}
+
+.gap{
+    grid-gap: 20px;
+}
+
+.altobanner{
+    height: 13.5rem;
+}
+
+
+.paleta1 { color: #F277A4; }
+.paleta2 { color: #008380; }
+.paleta3 { color: #192959; }
+.paleta4 { color: #6E30F2; }
+.paleta5 { color: #4129D9; }
+.paleta6 { color: #503FBF; }
+.paleta7 { color: #7162D9; }
+.paleta8 { color: #3C74A6; }
+.paleta9 { color: #6CD9B1; }
+.paleta10 { color: #5ABFAD; }
+.paleta11 { color: white;}
+.paleta12 { color: #3b3b3b; }
+.paleta13 {color: #00d4ff; }
+.paleta14 {color: #ffff00;}
+
 
 @import "../bootstrap/scss/bootstrap";
 
 .offcanvas {
     max-width: 13rem;
     background-color: rgb(35,35,35);
-    color: aliceblue;
+    color: white;
   }
 
- 
+  @media (max-width: 600px) {
+      .ocultar{ display: none;}
+  }
